# SappGo

./: Cargo.toml  MUJOCO_LOG.TXT  RAPPORT_COMPLET.md  README.md  impl.md
.cargo/: config.toml
assets/: robot_humanoid_load.xml
checkpoints/: best_actor.json  best_critic.json
configs/: eval.toml  train_curriculum.toml  train_default.toml
crates/sapggo-agent/: Cargo.toml
crates/sapggo-agent/src/: lib.rs  normalize.rs  policy.rs  ppo.rs  rollout.rs  value.rs
crates/sapggo-curriculum/: Cargo.toml
crates/sapggo-curriculum/src/: lib.rs  manager.rs  params.rs  stage.rs
crates/sapggo-env/: Cargo.toml
crates/sapggo-env/src/: environment.rs  error.rs  lib.rs  load.rs  noise.rs  reward.rs  robot.rs  sensor.rs  sim.rs  terrain.rs
crates/sapggo-eval/: Cargo.toml
crates/sapggo-eval/src/: evaluator.rs  main.rs
crates/sapggo-train/: Cargo.toml
crates/sapggo-train/src/: checkpoint.rs  config.rs  episode_log.rs  logger.rs  main.rs  trainer.rs  vec_env.rs
crates/sapggo-viz/: Cargo.toml
crates/sapggo-viz/src/: camera.rs  lib.rs  viewer.rs
examples/: manual_control.rs  random_agent.rs  trained_demo.rs
runs/: episodes.csv  episodes_old.csv  episodes_v2.csv  episodes_v2_short.csv  episodes_v3.csv  episodes_v4.csv  episodes_v5.csv  metrics.csv  metrics_old.csv  metrics_v2.csv  metrics_v2_short.csv  metrics_v3.csv  metrics_v4.csv  metrics_v5.csv  visual_episodes.csv
