[workspace]
resolver = "2"
members = [
    "crates/sapggo-env",
    "crates/sapggo-agent",
    "crates/sapggo-train",
    "crates/sapggo-eval",
    "crates/sapggo-curriculum",
    "crates/sapggo-viz",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["SAPGGO Contributors"]
license     = "MIT"

[workspace.dependencies]
mujoco-rs         = { version = "0.3", features = ["viewer"] }
burn              = { version = "0.13", features = ["wgpu", "autodiff"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
toml              = "0.8"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap              = { version = "4.0", features = ["derive"] }
rand              = "0.8"
rand_distr        = "0.4"
anyhow            = "1.0"
thiserror         = "1.0"
ndarray           = { version = "0.15", features = ["serde"] }
bincode           = "1.3"
rayon             = "1.10"
