[package]
name    = "sapggo-env"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sapggo-curriculum = { path = "../sapggo-curriculum" }
mujoco-rs         = { workspace = true, optional = true }
ndarray           = { workspace = true }
rand              = { workspace = true }
rand_distr        = { workspace = true }
serde             = { workspace = true }
tracing           = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }

[features]
default  = []
mujoco   = ["dep:mujoco-rs"]
