[package]
name    = "sapggo-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sapggo-eval"
path = "src/main.rs"

[dependencies]
sapggo-env   = { path = "../sapggo-env" }
sapggo-agent = { path = "../sapggo-agent" }
sapggo-viz   = { path = "../sapggo-viz" }
serde        = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
ndarray      = { workspace = true }
