[package]
name    = "sapggo-train"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sapggo-train"
path = "src/main.rs"

[[bin]]
name = "sapggo-visual-train"
path = "src/bin/visual_train.rs"
required-features = ["visual"]

[dependencies]
sapggo-env        = { path = "../sapggo-env" }
sapggo-agent      = { path = "../sapggo-agent" }
sapggo-curriculum = { path = "../sapggo-curriculum" }
sapggo-viz        = { path = "../sapggo-viz" }
mujoco-rs         = { workspace = true, optional = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
toml              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
clap              = { workspace = true }
rand              = { workspace = true }
anyhow            = { workspace = true }
ndarray           = { workspace = true }
bincode           = { workspace = true }
rayon             = { workspace = true }

[features]
default = []
visual  = ["dep:mujoco-rs", "sapggo-env/mujoco", "sapggo-viz/mujoco"]
